--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,11 @@
     "require": {
         "php": ">=5.6.4",
         "cviebrock/eloquent-sluggable": "^4.2",
+        "laracasts/flash": "^3.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4.0",
-        "laracasts/flash": "^3.0"
-
+        "laravelista/ekko": "^1.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
